--- a/source/app/DonkeySuite.DesktopMonitor.Wpf/App.config
+++ b/source/app/DonkeySuite.DesktopMonitor.Wpf/App.config
@@ -1,6 +1,38 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <appSettings>
+    <add key="DatabaseSubDirectory" value=".mdsoftware\dirWatcher\databases"/>
+  </appSettings>
+  <log4net>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <threshold value="INFO" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="Header" value="[Header]\r\n" />
+        <param name="Footer" value="[Footer]\r\n" />
+        <param name="ConversionPattern" value="%d [%t] %-5p %m%n" />
+      </layout>
+    </appender>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="Logs\DesktopMonitorLog.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="5" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="RollingFileAppender" />
+    </root>
+  </log4net>
 </configuration>
