--- a/source/app/DonkeySuite.DesktopMonitor.Wpf/App.config
+++ b/source/app/DonkeySuite.DesktopMonitor.Wpf/App.config
@@ -7,7 +7,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="DatabaseSubDirectory" value=".mdsoftware\dirWatcher\databases"/>
+    <add key="DatabaseSubDirectory" value=".mdsoftware\dirWatcher\databases" />
   </appSettings>
   <log4net>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
@@ -34,5 +34,17 @@
       <appender-ref ref="ConsoleAppender" />
       <appender-ref ref="RollingFileAppender" />
     </root>
+    <logger name="NHibernate">
+      <level value="ERROR" />
+    </logger>
+    <logger name="NHibernate.SQL">
+      <level value="ERROR" />
+    </logger>
   </log4net>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
