--- a/source/app/DonkeySuite.DesktopMonitor.Wpf/DonkeySuite.DesktopMonitor.Wpf.csproj
+++ b/source/app/DonkeySuite.DesktopMonitor.Wpf/DonkeySuite.DesktopMonitor.Wpf.csproj
@@ -155,6 +155,10 @@
       <Project>{F284CAB2-54E4-4918-B691-FB5923103225}</Project>
       <Name>DonkeySuite.DesktopMonitor.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DonkeySuite.SystemWrappers\DonkeySuite.SystemWrappers.csproj">
+      <Project>{7C5E0314-E847-4088-8614-65D8812FFC9A}</Project>
+      <Name>DonkeySuite.SystemWrappers</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\System.Data.SQLite.Core.1.0.96.0\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\..\packages\System.Data.SQLite.Core.1.0.96.0\build\net45\System.Data.SQLite.Core.targets')" />
