Made project as a whole more "dependency injectable"

--- a/source/app/DonkeySuite.DesktopMonitor.Domain/DonkeySuite.DesktopMonitor.Domain.csproj
+++ b/source/app/DonkeySuite.DesktopMonitor.Domain/DonkeySuite.DesktopMonitor.Domain.csproj
@@ -34,10 +34,6 @@
       <HintPath>..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DependencyManager.cs" />
-    <Compile Include="IRepository.cs" />
+    <Compile Include="Model\Providers\IRequestProvider.cs" />
+    <Compile Include="Model\Providers\IServiceLocator.cs" />
+    <Compile Include="Model\EnvironmentUtility.cs" />
+    <Compile Include="Model\IEnvironmentUtility.cs" />
+    <Compile Include="Model\Providers\RequestProvider.cs" />
+    <Compile Include="Model\Repositories\Settings\IWatchedFileRepository.cs" />
     <Compile Include="Model\Requests\AddImageRequest.cs" />
     <Compile Include="Model\Requests\BaseRequest.cs" />
     <Compile Include="Model\Requests\WebRequestFactory.cs" />
@@ -68,9 +68,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DonkeySuite.SystemWrappers\DonkeySuite.SystemWrappers.csproj">
-      <Project>{7c5e0314-e847-4088-8614-65d8812ffc9a}</Project>
-      <Name>DonkeySuite.SystemWrappers</Name>
+    <ProjectReference Include="..\MadDonkeySoftware.SystemWrappers\MadDonkeySoftware.SystemWrappers.csproj">
+      <Project>{E088CE6A-F788-4F7F-A06A-E356FD7645CB}</Project>
+      <Name>MadDonkeySoftware.SystemWrappers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
