--- a/source/app/Tests/DonkeySuite.Tests.DesktopMonitor.Domain/DonkeySuite.Tests.DesktopMonitor.Domain.csproj
+++ b/source/app/Tests/DonkeySuite.Tests.DesktopMonitor.Domain/DonkeySuite.Tests.DesktopMonitor.Domain.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyManagerTest.cs" />
     <Compile Include="Model\Requests\WebRequestFactoryTests.cs" />
     <Compile Include="Model\SortStrategies\SimpleSortStrategyTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,9 +73,9 @@
       <Project>{F284CAB2-54E4-4918-B691-FB5923103225}</Project>
       <Name>DonkeySuite.DesktopMonitor.Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\DonkeySuite.SystemWrappers\DonkeySuite.SystemWrappers.csproj">
-      <Project>{7C5E0314-E847-4088-8614-65D8812FFC9A}</Project>
-      <Name>DonkeySuite.SystemWrappers</Name>
+    <ProjectReference Include="..\..\MadDonkeySoftware.SystemWrappers\MadDonkeySoftware.SystemWrappers.csproj">
+      <Project>{E088CE6A-F788-4F7F-A06A-E356FD7645CB}</Project>
+      <Name>MadDonkeySoftware.SystemWrappers</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
