--- a/source/app/MadDonkeySoftware.SystemWrappers/MadDonkeySoftware.SystemWrappers.csproj
+++ b/source/app/MadDonkeySoftware.SystemWrappers/MadDonkeySoftware.SystemWrappers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7C5E0314-E847-4088-8614-65D8812FFC9A}</ProjectGuid>
+    <ProjectGuid>{E088CE6A-F788-4F7F-A06A-E356FD7645CB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DonkeySuite.SystemWrappers</RootNamespace>
-    <AssemblyName>DonkeySuite.SystemWrappers</AssemblyName>
+    <RootNamespace>MadDonkeySoftware.SystemWrappers</RootNamespace>
+    <AssemblyName>MadDonkeySoftware.SystemWrappers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,17 +39,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DirectoryWrapper.cs" />
     <Compile Include="EnvironmentWrapper.cs" />
-    <Compile Include="FileWrapper.cs" />
-    <Compile Include="Interfaces\IDirectory.cs" />
-    <Compile Include="Interfaces\IEnvironment.cs" />
-    <Compile Include="Interfaces\IFile.cs" />
-    <Compile Include="Interfaces\ISemaphore.cs" />
-    <Compile Include="Interfaces\ISerializer.cs" />
+    <Compile Include="IEnvironment.cs" />
+    <Compile Include="IO\DirectoryWrapper.cs" />
+    <Compile Include="IO\FileWrapper.cs" />
+    <Compile Include="IO\IDirectory.cs" />
+    <Compile Include="IO\IFile.cs" />
+    <Compile Include="IO\IPath.cs" />
+    <Compile Include="IO\PathWrapper.cs" />
+    <Compile Include="Net\HttpWebRequestFactory.cs" />
+    <Compile Include="Net\HttpWebRequestWrapper.cs" />
+    <Compile Include="Net\HttpWebResponseWrapper.cs" />
+    <Compile Include="Net\IHttpWebRequest.cs" />
+    <Compile Include="Net\IHttpWebRequestFactory.cs" />
+    <Compile Include="Net\IHttpWebResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SemaphoreWrapper.cs" />
-    <Compile Include="XmlSerializerWrapper.cs" />
+    <Compile Include="Threading\ISemaphore.cs" />
+    <Compile Include="Threading\SemaphoreWrapper.cs" />
+    <Compile Include="Xml\Serialization\ISerializer.cs" />
+    <Compile Include="Xml\Serialization\XmlSerializerWrapper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
