--- a/source/app/DonkeySuite.DesktopMonitor.Domain/DonkeySuite.DesktopMonitor.Domain.csproj
+++ b/source/app/DonkeySuite.DesktopMonitor.Domain/DonkeySuite.DesktopMonitor.Domain.csproj
@@ -51,7 +51,8 @@
     <Compile Include="Model\Repositories\Settings\IWatchedFileRepository.cs" />
     <Compile Include="Model\Requests\AddImageRequest.cs" />
     <Compile Include="Model\Requests\BaseRequest.cs" />
-    <Compile Include="Model\Requests\WebRequestFactory.cs" />
+    <Compile Include="Model\Requests\IAddImageRequest.cs" />
+    <Compile Include="Model\Requests\IBaseRequest.cs" />
     <Compile Include="Model\Settings\ImageServer.cs" />
     <Compile Include="Model\Settings\OperationMode.cs" />
     <Compile Include="Model\Settings\SettingsRoot.cs" />
