--- a/source/app/MadDonkeySoftware.SystemWrappers/MadDonkeySoftware.SystemWrappers.csproj
+++ b/source/app/MadDonkeySoftware.SystemWrappers/MadDonkeySoftware.SystemWrappers.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -47,17 +47,19 @@
     <Compile Include="IO\IFile.cs" />
     <Compile Include="IO\IPath.cs" />
     <Compile Include="IO\PathWrapper.cs" />
-    <Compile Include="Net\HttpWebRequestFactory.cs" />
-    <Compile Include="Net\HttpWebRequestWrapper.cs" />
     <Compile Include="Net\HttpWebResponseWrapper.cs" />
-    <Compile Include="Net\IHttpWebRequest.cs" />
-    <Compile Include="Net\IHttpWebRequestFactory.cs" />
     <Compile Include="Net\IHttpWebResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Threading\ISemaphore.cs" />
     <Compile Include="Threading\SemaphoreWrapper.cs" />
     <Compile Include="Xml\Serialization\ISerializer.cs" />
     <Compile Include="Xml\Serialization\XmlSerializerWrapper.cs" />
+    <Compile Include="Net\WebRequestFactory.cs" />
+    <Compile Include="Net\IWebRequestFactory.cs" />
+    <Compile Include="Net\IWebRequest.cs" />
+    <Compile Include="Net\WebRequestWrapper.cs" />
+    <Compile Include="Net\IWebResponse.cs" />
+    <Compile Include="Net\WebResponseWrapper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
