--- a/source/app/DonkeySuite.DesktopMonitor.Domain/DonkeySuite.DesktopMonitor.Domain.csproj
+++ b/source/app/DonkeySuite.DesktopMonitor.Domain/DonkeySuite.DesktopMonitor.Domain.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\ILogProvider.cs" />
+    <Compile Include="Model\LogProvider.cs" />
     <Compile Include="Model\Providers\IRequestProvider.cs" />
     <Compile Include="Model\Providers\IServiceLocator.cs" />
     <Compile Include="Model\EnvironmentUtility.cs" />
