--- a/source/app/Tests/DonkeySuite.Tests.DesktopMonitor.Domain/DonkeySuite.Tests.DesktopMonitor.Domain.csproj
+++ b/source/app/Tests/DonkeySuite.Tests.DesktopMonitor.Domain/DonkeySuite.Tests.DesktopMonitor.Domain.csproj
@@ -56,6 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DependencyManagerTest.cs" />
+    <Compile Include="Model\EnvironmentUtilityTest.cs" />
+    <Compile Include="Model\LogProviderTest.cs" />
+    <Compile Include="Model\Providers\RequestProviderTest.cs" />
     <Compile Include="Model\Requests\WebRequestFactoryTests.cs" />
     <Compile Include="Model\SortStrategies\SimpleSortStrategyTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
