--- a/source/app/DonkeySuite.DesktopMonitor.Wpf/DonkeySuite.DesktopMonitor.Wpf.csproj
+++ b/source/app/DonkeySuite.DesktopMonitor.Wpf/DonkeySuite.DesktopMonitor.Wpf.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Mappings\WatchedFileMap.cs" />
     <Compile Include="NHibernateHelper.cs" />
     <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Repositories\CredentialRepository.cs" />
     <Compile Include="Repositories\WatchFileRepository.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
