--- a/source/app/DonkeySuite.ImageServer.Api/DonkeySuite.ImageServer.Api.csproj
+++ b/source/app/DonkeySuite.ImageServer.Api/DonkeySuite.ImageServer.Api.csproj
@@ -151,7 +151,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ImageController.cs" />
+    <Compile Include="Domain\BasicAuthenticationIdentity.cs" />
+    <Compile Include="Filters\BasicAuthenticationFilter.cs" />
     <Compile Include="Filters\CustomExceptionHandling.cs" />
+    <Compile Include="Filters\TokenAuthenticationFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
