--- a/source/app/Tests/DonkeySuite.Tests.DesktopMonitor.Domain/DonkeySuite.Tests.DesktopMonitor.Domain.csproj
+++ b/source/app/Tests/DonkeySuite.Tests.DesktopMonitor.Domain/DonkeySuite.Tests.DesktopMonitor.Domain.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Model\LogProviderTest.cs" />
     <Compile Include="Model\Providers\RequestProviderTest.cs" />
     <Compile Include="Model\Requests\WebRequestFactoryTests.cs" />
+    <Compile Include="Model\Settings\ImageServersTest.cs" />
     <Compile Include="Model\SortStrategies\SimpleSortStrategyTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
