Corrected tests for SettingsManager and SettingsRepository

--- a/source/app/DonkeySuite.DesktopMonitor.Wpf/DonkeySuite.DesktopMonitor.Wpf.csproj
+++ b/source/app/DonkeySuite.DesktopMonitor.Wpf/DonkeySuite.DesktopMonitor.Wpf.csproj
@@ -106,6 +106,7 @@
     <Compile Include="DependencyManager.cs" />
     <Compile Include="Mappings\WatchedFileMap.cs" />
     <Compile Include="NHibernateHelper.cs" />
+    <Compile Include="Repositories\SettingsRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\CredentialRepository.cs" />
     <Compile Include="Repositories\WatchFileRepository.cs" />
