--- a/source/app/Tests/DonkeySuite.Tests.DesktopMonitor.Wpf/DonkeySuite.Tests.DesktopMonitor.Wpf.csproj
+++ b/source/app/Tests/DonkeySuite.Tests.DesktopMonitor.Wpf/DonkeySuite.Tests.DesktopMonitor.Wpf.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F284CAB2-54E4-4918-B691-FB5923103225}</ProjectGuid>
+    <ProjectGuid>{A3E36F83-A489-4C80-9723-15C6A5184769}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DonkeySuite.DesktopMonitor.Domain</RootNamespace>
-    <AssemblyName>DonkeySuite.DesktopMonitor.Domain</AssemblyName>
+    <RootNamespace>DonkeySuite.Tests.DesktopMonitor.Wpf</RootNamespace>
+    <AssemblyName>DonkeySuite.Tests.DesktopMonitor.Wpf</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+      <HintPath>..\..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq, Version=4.2.1506.2515, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Moq.4.2.1506.2515\lib\net40\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -43,47 +51,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\DirectoryScanner.cs" />
-    <Compile Include="Model\IDirectoryScanner.cs" />
-    <Compile Include="Model\ILogProvider.cs" />
-    <Compile Include="Model\IWatchedFile.cs" />
-    <Compile Include="Model\LogProvider.cs" />
-    <Compile Include="Model\Providers\IRequestProvider.cs" />
-    <Compile Include="Model\Providers\IEntityProvider.cs" />
-    <Compile Include="Model\EnvironmentUtility.cs" />
-    <Compile Include="Model\IEnvironmentUtility.cs" />
-    <Compile Include="Model\Providers\RequestProvider.cs" />
-    <Compile Include="Model\Repositories\ICredentialRepository.cs" />
-    <Compile Include="Model\Repositories\ISettingsRepository.cs" />
-    <Compile Include="Model\Repositories\IWatchedFileRepository.cs" />
-    <Compile Include="Model\Requests\AddImageRequest.cs" />
-    <Compile Include="Model\Requests\BaseRequest.cs" />
-    <Compile Include="Model\Requests\IAddImageRequest.cs" />
-    <Compile Include="Model\Requests\IBaseRequest.cs" />
-    <Compile Include="Model\Settings\IImageServer.cs" />
-    <Compile Include="Model\Settings\IImageServers.cs" />
-    <Compile Include="Model\Settings\ImageServer.cs" />
-    <Compile Include="Model\Settings\ImageServers.cs" />
-    <Compile Include="Model\Settings\ISettingsManager.cs" />
-    <Compile Include="Model\Settings\IWatchDirectories.cs" />
-    <Compile Include="Model\Settings\IWatchDirectory.cs" />
-    <Compile Include="Model\Settings\OperationMode.cs" />
-    <Compile Include="Model\Settings\SettingsRoot.cs" />
-    <Compile Include="Model\Settings\SettingsManager.cs" />
-    <Compile Include="Model\Settings\WatchDirectories.cs" />
-    <Compile Include="Model\Settings\WatchDirectory.cs" />
-    <Compile Include="Model\SortStrategies\ISortStrategy.cs" />
-    <Compile Include="Model\SortStrategies\SimpleSortStrategy.cs" />
-    <Compile Include="Model\WatchedDirectory.cs" />
-    <Compile Include="Model\WatchedFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\SettingsRepositoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MadDonkeySoftware.SystemWrappers\MadDonkeySoftware.SystemWrappers.csproj">
-      <Project>{E088CE6A-F788-4F7F-A06A-E356FD7645CB}</Project>
+    <ProjectReference Include="..\..\DonkeySuite.DesktopMonitor.Domain\DonkeySuite.DesktopMonitor.Domain.csproj">
+      <Project>{F284CAB2-54E4-4918-B691-FB5923103225}</Project>
+      <Name>DonkeySuite.DesktopMonitor.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\DonkeySuite.DesktopMonitor.Wpf\DonkeySuite.DesktopMonitor.Wpf.csproj">
+      <Project>{6ee312f1-85e0-497e-9553-4e0a4d8f90c4}</Project>
+      <Name>DonkeySuite.DesktopMonitor.Wpf</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\MadDonkeySoftware.SystemWrappers\MadDonkeySoftware.SystemWrappers.csproj">
+      <Project>{e088ce6a-f788-4f7f-a06a-e356fd7645cb}</Project>
       <Name>MadDonkeySoftware.SystemWrappers</Name>
     </ProjectReference>
   </ItemGroup>
